--- a/src/propertyfiles/abcccc.properties
+++ b/src/propertyfiles/abcccc.properties
@@ -2,4 +2,4 @@ mysql_driver_name = com.mysql.jdbc.Driver
 mysql_connection_string = jdbc:mysql://localhost
 mysql_db_name = practicedb
 mysql_db_username = root
-mysql_db_password =
+mysql_db_password = root
